<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F9FAFB"
        android:orientation="vertical"
        tools:context=".Fragments.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.56dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="19dp"
            android:paddingEnd="18dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.57dp"
                android:layout_marginBottom="13.57dp"
                android:layout_weight="1"
                android:text="@string/xin_chao_name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgThongBao"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_small_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="19dp"
            android:background="@drawable/bgr_sum_hoa_hong"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum_hoa_hong_thang_3"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtvTongHoaHong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/d_0"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:layout_marginTop="14.8dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="19dp"
            android:paddingTop="15.2dp"
            android:paddingEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/giai_ngan"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layoutQuy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtvQuy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Quý 1/2022"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="9dp"
                        android:src="@drawable/ic_check" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/bgr_sum_giai_ngan"
                android:orientation="vertical"
                android:paddingStart="17dp"
                android:paddingTop="15.5dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tong_tien_giai_ngan"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtvSumGiaNgan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/d_0"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="19dp"
            android:paddingTop="22dp"
            android:paddingEnd="19dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tong_yeu_cau_vay"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTongYeuCauVay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>